[ResourceList] Fix header alignment (#7965)
Fixes https://github.com/Shopify/polaris/issues/7959

--- a/polaris-react/src/components/ResourceList/ResourceList.scss
+++ b/polaris-react/src/components/ResourceList/ResourceList.scss
@@ -72,12 +72,8 @@ $breakpoints-empty-search-results-height-up: '(min-height: #{breakpoint(600px)})
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   width: 100%;
   min-height: resource-list(header-min-height);
-  padding: calc(var(--p-space-3) - var(--p-space-05)) var(--p-space-4);
+  padding: calc(var(--p-space-3) - var(--p-space-05)) var(--p-space-5);
   background-color: var(--p-surface);
-
-  @media #{$p-breakpoints-sm-up} {
-    flex-direction: row;
-  }
 }
 
 .HeaderWrapper-isSticky {
@@ -90,9 +86,9 @@ $breakpoints-empty-search-results-height-up: '(min-height: #{breakpoint(600px)})
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   z-index: resource-list(content-wrapper-stacking-order);
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  right: var(--p-space-3);
+  right: var(--p-space-5);
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  left: var(--p-space-3);
+  left: var(--p-space-5);
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   display: flex;
   min-height: resource-list(header-content-min-height);
@@ -101,14 +97,6 @@ $breakpoints-empty-search-results-height-up: '(min-height: #{breakpoint(600px)})
 
   .HeaderWrapper-inSelectMode & {
     opacity: 0;
-  }
-
-  @media #{$p-breakpoints-sm-up} {
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    right: var(--p-space-4);
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    left: var(--p-space-4);
-    align-self: flex-start;
   }
 }
 
@@ -235,7 +223,6 @@ $breakpoints-empty-search-results-height-up: '(min-height: #{breakpoint(600px)})
 .CheckableButtonWrapper {
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   display: none;
-  margin-left: calc(-1 * var(--p-space-05));
 
   @media #{$p-breakpoints-sm-up} {
     // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
